# rusty-youscrubber

./: .gitignore  Cargo.toml
src/: convert.rs  data.rs  integrate.rs  lib.rs  main.rs  sql.rs
src/constructors/: automatic_captions.rs  captions.rs  channel_tags.rs  channel_thumbnails.rs  chapters.rs  format_sort_field.rs  formats.rs  heatmaps.rs  mod.rs  payload.rs  subtitle_type.rs  subtitles.rs  version.rs  video_categories.rs  video_tags.rs  video_thumbnails.rs  videos.rs
src/constructors_models/: automatic_captions.rs  captions.rs  channel_thumbnails.rs  chapters.rs  format_sort_field.rs  formats.rs  fragments.rs  heatmaps.rs  mod.rs  payload.rs  requested_download.rs  subtitle_type.rs  subtitles.rs  videos.rs
src/json_models/: automatic_caption.rs  channel.rs  channel_thumbnail.rs  chapter.rs  files_to_move.rs  format.rs  fragment.rs  mod.rs  requested_download.rs  requested_format.rs  video.rs  video_thumbnail.rs
src/json_models2/: channel.rs  chapters.rs  entry_type.rs  fragment.rs  heatmap.rs  mod.rs  subtitle.rs  version.rs  video.rs
src/sea_orm_models/: automaticcaptions.rs  caption.rs  channelcategory.rs  channeltag.rs  channelthumbnail.rs  chapter.rs  entry.rs  format.rs  formatsortfield.rs  fragment.rs  heatmap.rs  httpheader.rs  mod.rs  payload.rs  prelude.rs  requesteddownload.rs  subtitle.rs  subtitletype.rs  version.rs  videocategory.rs  videotag.rs  videothumbnail.rs
