[package]
name = "yourust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.117"
log = "0.4.21"
env_logger = "0.11.3"

[dependencies.serde]
version = "1.0.202"
features = ["derive"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
lto = false
opt-level = 0
codegen-units = 1
incremental = true
debug = true


[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
