[package]
name = "yourust"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0.117"
log = "0.4.21"
env_logger = "0.11.3"
futures = "0.3.30"

[dependencies.tokio]
version = "1.37.0"
features = ["full"]

[dependencies.serde]
version = "1.0.202"
features = ["derive"]

[dependencies.sea-orm]
version = "0.12.15"
features = [
    "sqlx-sqlite",
    "macros",
    "runtime-tokio-native-tls",
    "debug-print"
]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
lto = false
opt-level = 0
codegen-units = 1
incremental = true
debug = true


[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
